revisa enem faq

--- a/Home principal/index.html
+++ b/Home principal/index.html
@@ -14,13 +14,14 @@
 
 
 <div class="header">
-    <div class="container">
+    <div class="container" >
         <img id="icone" src="..\icons\icon1.svg" alt="Logo"/>
 
-        <p id="duvida"> Duvidas Revisa Enem </p>
+        <p id="duvida" > Como posso ajudar você? </p>
     </div>
 
     <article class="container pesquisar">
+
         <input type="text" name="pesquisar" placeholder="Pesquisar dúvida...">
 
         <img src="..\icons/icon2.svg" alt="lucas" class="lupa_pesquisar">
@@ -29,6 +30,7 @@
 
 
 <div class="container">
+
     <p class="voce"> Você é?</p>
     <div role="group">
         <a href="#alunos">
@@ -46,7 +48,7 @@
 
 <div class="container">
     <h3 class="titulo" id="alunos">
-        Duvidas de alunos
+        Dúvida de alunos
     </h3>
 </div>
 
@@ -54,8 +56,8 @@
     <a href="http://localhost:63342/Faq/Duvida%20Alunos/index2.html?_ijt=eoluqn2a7efnafb2q306qn21v8">
         <div class="card" id="card">
             <div class="card-body">
-                <span id="letraduvida">Duvidas sobre login</span>
-                <img id="icone3" src="..\icons/icon3.svg" alt=""/>
+                <span id="letraduvida">Dúvidas sobre login</span>
+                <img id="icone3" src="..\icons\icon3.svg" alt=""/>
             </div>
         </div>
     </a>
@@ -63,7 +65,7 @@
 <a href="#">
     <div class="card" id="card">
         <div class="card-body">
-            <span id="letraduvida">Duvidas sobre Redação</span>
+            <span id="letraduvida">Dúvidas sobre Redação</span>
             <img id="icone3" src="..\icons/icon3.svg" alt=""/>
         </div>
     </div>
@@ -72,7 +74,7 @@
     <a href="#">
         <div class="card" id="card">
             <div class="card-body">
-                <span id="letraduvida">Duvidas sobre simulado estadual</span>
+                <span id="letraduvida">Dúvidas sobre simulado estadual</span>
                 <img id="icone3" src="..\icons/icon3.svg" alt=""/>
             </div>
         </div>
@@ -83,7 +85,7 @@
 
 <div class="container">
     <h3 class="titulo" id="professor">
-        Duvidas de Professores
+        Dúvidas de Professores
     </h3>
 </div>
 
@@ -92,7 +94,7 @@
     <a href="#">
         <div class="card" id="card">
             <div class="card-body">
-                <span id="letraduvida">Duvidas sobre login</span>
+                <span id="letraduvida">Dúvidas sobre login</span>
                 <img id="icone3" src="..\icons/icon3.svg" alt=""/>
             </div>
         </div>
@@ -101,7 +103,7 @@
     <a href="#">
         <div class="card" id="card">
             <div class="card-body">
-                <span id="letraduvida">Duvidas sobre Redação</span>
+                <span id="letraduvida">Dúvidas sobre Redação</span>
                 <img id="icone3" src="..\icons/icon3.svg" alt=""/>
             </div>
         </div>
@@ -110,7 +112,7 @@
     <a href="#">
         <div class="card" id="card">
             <div class="card-body">
-                <span id="letraduvida">Duvidas sobre simulado estadual</span>
+                <span id="letraduvida">Dúvidas sobre simulado estadual</span>
                 <img id="icone3" src="..\icons/icon3.svg" alt=""/>
             </div>
         </div>
@@ -121,7 +123,7 @@
 
 <div class="container">
     <h3 class="titulo" id="diretor">
-        Duvidas de Diretor
+        Dúvidas de Diretor
     </h3>
 </div>
 
@@ -130,7 +132,7 @@
     <a href="#">
         <div class="card" id="card">
             <div class="card-body">
-                <span id="letraduvida">Duvidas sobre login</span>
+                <span id="letraduvida">Dúvidas sobre login</span>
                 <img id="icone3" src="..\icons/icon3.svg" alt=""/>
             </div>
         </div>
@@ -139,7 +141,7 @@
     <a href="#">
         <div class="card" id="card">
             <div class="card-body">
-                <span id="letraduvida">Duvidas sobre Redação</span>
+                <span id="letraduvida">Dúvidas sobre Redação</span>
                 <img id="icone3" src="..\icons/icon3.svg" alt=""/>
             </div>
         </div>
@@ -148,7 +150,7 @@
     <a href="#">
         <div class="card" id="card">
             <div class="card-body">
-                <span id="letraduvida">Duvidas sobre simulado estadual</span>
+                <span id="letraduvida">Dúvidas sobre simulado estadual</span>
                 <img id="icone3" src="..\icons/icon3.svg" alt=""/>
             </div>
         </div>
